# LockIt

./: .gitignore  Feedback_FinalPresentation.md  README.md
ClassDiagrams/: Classes.mmd
iot_subsystems/: README  README.md  pyproject.toml  pytest.ini  readings.csv
iot_subsystems/src/: README.md
iot_subsystems/src/common/devices/: actuator.py  aht20.py  camera.py  device_controller.py  door_sensor.py  lock.py  mocks.py  sensor.py  tmg39931.py
iot_subsystems/src/common/dylan_system/devices/: camera.py
iot_subsystems/src/common/interfaces/: __init__.py  keyboard.py  reterminal.py
iot_subsystems/src/common/iot/: __init__.py
iot_subsystems/src/common/tjklint-system/: README.md
iot_subsystems/src/dylan_system/: README.md  __main__.py  example_system.py  runner.py
iot_subsystems/src/dylan_system/devices/: aht20.py  camera.py  fan.py
iot_subsystems/src/dylan_system/interfaces/: __init__.py
iot_subsystems/src/dylan_system/iot/: azure_device_client.py
iot_subsystems/src/example_system/: README  README.md  runner.py
iot_subsystems/src/example_system/devices/: fan.py
iot_subsystems/src/example_system/interfaces/: __init__.py
iot_subsystems/src/example_system/iot/: azure_device_client.py
iot_subsystems/src/joshkrav_system/: README.md  __main__.py  example_system.py  runner.py
iot_subsystems/src/joshkrav_system/devices/: door_sensor.py  fan.py  lock.py  tmg39931.py
iot_subsystems/src/joshkrav_system/interfaces/: __init__.py
iot_subsystems/src/joshkrav_system/iot/: azure_device_client.py
iot_subsystems/src/tjklint-system/: runner.py
iot_subsystems/src/tjklint-system/interfaces/: __init__.py
iot_subsystems/src/tjklint_system/: .env.example  README.md  __main__.py  example_system.py  pyproject.toml  runner.py  system.py
iot_subsystems/src/tjklint_system/devices/: actuator.py  aht20.py  fan.py  gps.py  motion.py  toggle_actuator.py
iot_subsystems/src/tjklint_system/interfaces/: __init__.py
iot_subsystems/src/tjklint_system/iot/: azure_device_client.py
iot_subsystems/tests/dylan_system/: conftest.py
iot_subsystems/tests/dylan_system/integration/: conftest.py  test_system.py
iot_subsystems/tests/dylan_system/unit/: test_aht20.py  test_fan.py  test_lock.py
iot_subsystems/tests/example_system/: conftest.py
iot_subsystems/tests/example_system/integration/: conftest.py  test_system.py
iot_subsystems/tests/example_system/unit/: test_aht20.py  test_fan.py  test_lock.py  test_tg39931.py
(+106 files in other folders)
