[project]
name = "final-project-upstream"
version = "0.1.0"
description = "Upstream repository for W25 Connected Objects final project."
authors = [
    {name = "michaelhaaf", email = "michael.haaf@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = "GPL-3.0-or-later"
